--- a/package.json
+++ b/package.json
@@ -17,16 +17,24 @@
     "lint:eslint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/react": "^3.6.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@astrolib/analytics": "^0.5.0",
     "@astrolib/seo": "^1.0.0-beta.5",
     "@fontsource-variable/inter": "^5.0.18",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.10.1",
     "astro-embed": "^0.7.2",
     "astro-icon": "^1.1.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "unpic": "^3.18.0"
   },
   "devDependencies": {
@@ -59,5 +67,6 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0"
-  }
+  },
+  "packageManager": "pnpm@9.4.0"
 }
